<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/loginf"
    android:orientation="vertical"
    tools:context=".Login">

    <ImageView
        android:layout_width="200dp"
        android:layout_height="120dp"
        android:layout_gravity="center"
        android:layout_marginTop="45dp"
        android:src="@drawable/logo1"
        android:contentDescription="TODO" />

    <TextView
        style="@style/loginHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="75dp"
        android:layout_marginLeft="150dp"
        android:textColor="@android:color/black"
        android:text="Login" />


    <EditText
        android:id="@+id/etName"
        style="@style/parent"
        android:layout_width="270dp"
        android:layout_height="42dp"
        android:layout_marginTop="@dimen/loginViewsMargin"
        android:hint="@string/login_email_hint"
        android:inputType="textEmailAddress"
        android:layout_marginLeft="55dp"
        android:maxLines="1" />

    <EditText
        android:id="@+id/etPassword"
        style="@style/parent"
        android:layout_width="270dp"
        android:layout_height="42dp"
        android:layout_marginTop="@dimen/loginViewsMargin"
        android:hint="@string/login_password_hint"
        android:inputType="textPassword"
        android:layout_marginLeft="55dp"
        android:maxLines="1" />

    <TextView
        android:id="@+id/tvFP"
        android:layout_width="270dp"
        android:layout_height="20dp"
        android:textAlignment="center"
        android:textStyle="bold"
        android:fontFamily="sans-serif"
        android:textColor="@android:color/black"
        android:text="@string/forget_password"
        android:layout_marginStart="120dp"
        android:layout_marginTop="10dp"
        tools:ignore="HardcodedText" />

    <Button
        android:id="@+id/btn"
        android:background="@drawable/login_button_bk"
        style="@style/loginButton"
        app:backgroundTint="#9BE413"
        android:layout_marginStart="120dp"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:layout_marginTop="@dimen/loginViewsMargin"
        android:text="@string/login" />

    <TextView
        android:id="@+id/tvRegister"
        style="@style/parent"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textColor="@android:color/black"
        android:text="@string/login_signup_hint"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="10dp"/>
</LinearLayout>