<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Appointment">

    <EditText
        android:id="@+id/etname"
        android:layout_width="321dp"
        android:layout_height="62dp"
        android:ems="10"
        android:hint="@string/name"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.437"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.081"
        android:autofillHints="testHint"
        android:importantForAutofill="no" />


    <EditText
        android:id="@+id/etphone"
        android:layout_width="324dp"
        android:layout_height="60dp"
        android:autofillHints="testHint"
        android:ems="10"
        android:hint="@string/phone_number"
        android:inputType="phone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.459"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etemail"
        app:layout_constraintVertical_bias="0.054"
        tools:ignore="HardcodedText" />

    <EditText
        android:id="@+id/etemail"
        android:layout_width="320dp"
        android:layout_height="61dp"
        android:layout_marginBottom="356dp"
        android:autofillHints="testHint"
        android:ems="10"
        android:hint="@string/email_address"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.439"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etname" />

    <EditText
        android:id="@+id/etage"
        android:layout_width="317dp"
        android:layout_height="60dp"
        android:autofillHints="testHint"
        android:ems="10"
        android:hint="@string/age"
        android:inputType="phone"
        app:layout_constraintBottom_toTopOf="@+id/etemail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.468"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etname"
        app:layout_constraintVertical_bias="0.641"
        tools:ignore="HardcodedText" />

    <Button
        android:id="@+id/btn"
        android:layout_width="133dp"
        android:layout_height="57dp"
        android:text="@string/submit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etphone"
        app:layout_constraintVertical_bias="0.553"
        tools:ignore="OnClick" />

    <EditText
        android:id="@+id/etdate"
        android:layout_width="324dp"
        android:layout_height="59dp"
        android:layout_marginTop="24dp"
        android:autofillHints="testHint"
        android:ems="10"
        android:hint="@string/select_date"
        android:inputType="date"
        app:layout_constraintBottom_toTopOf="@+id/btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.482"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etphone"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="HardcodedText" />

    <Button
        android:id="@+id/button2"
        android:layout_width="135dp"
        android:layout_height="57dp"
        android:onClick="sendMail"
        android:text="Notify to Doctor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn"
        app:layout_constraintVertical_bias="0.538" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="146dp"
        android:layout_height="21dp"
        android:text="*click here also"
        android:textAlignment="center"
        android:textColor="@android:color/holo_red_dark"
        app:layout_constraintBottom_toTopOf="@+id/button2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn"
        app:layout_constraintVertical_bias="0.666" />

    <Spinner
        android:id="@+id/spinnerid"
        android:layout_width="327dp"
        android:layout_height="41dp"
        android:layout_marginTop="28dp"
        app:layout_constraintBottom_toTopOf="@+id/btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etdate"
        app:layout_constraintVertical_bias="0.434" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="168dp"
        android:layout_height="21dp"
        android:text="select meeting mode"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.172"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.63" />


</androidx.constraintlayout.widget.ConstraintLayout>